--- a/sliderule_dsi_inferential_statistics_exercise_1.ipynb
+++ b/sliderule_dsi_inferential_statistics_exercise_1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -61,6 +61,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(130, 3)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -72,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -80,22 +102,22 @@
     {
      "data": {
       "text/plain": [
-       "98.25"
+       "98.24923076923078"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "m=df.temperature.mean()\n",
-    "m="
+    "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -124,13 +146,13 @@
        "-5.4548232923640789"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t=(m-98.6)/(sd/np.sqrt(130))\n",
+    "t=(m-98.6)/(sd/np.sqrt(len(df)))\n",
     "t"
    ]
   },
@@ -152,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -197,19 +219,19 @@
        "97.898461538461561"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cil=m + (t* (sd/np.sqrt(130)))\n",
+    "cil=m + (t* (sd/np.sqrt(len(df))))\n",
     "cil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -220,13 +242,13 @@
        "98.599999999999994"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cir=m - (t* (sd/np.sqrt(130)))\n",
+    "cir=m - (t* (sd/np.sqrt(len(df))))\n",
     "cir"
    ]
   },
@@ -246,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -703,7 +725,7 @@
        "[65 rows x 3 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -726,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -735,12 +757,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The t-statistic is 0.000 and the p-value is 1.000.\n"
+      "The t-statistic is -2.285 and the p-value is 0.024.\n"
      ]
     }
    ],
    "source": [
-    "st=stats.ttest_ind(dfm.temperature,dfm.temperature)\n",
+    "st=stats.ttest_ind(dfm.temperature,dff.temperature)\n",
     "print \"The t-statistic is %.3f and the p-value is %.3f.\" % st"
    ]
   },
@@ -748,7 +770,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** 4. Hence do not reject null hypothesis: meaning no significant difference in mean temp of males and females**"
+    "** 4. Hence reject null hypothesis: meaning there is significant difference in mean temp of males and females**"
    ]
   },
   {
